# tfm-project

./: .gitignore  LICENSE  README.md  anteproyecto_tfm.tex  pyproject.toml
app/: streamlit_app.py
data/: README.md
notebooks/: data_ingestion.ipynb  exploratory_data_analysis.ipynb
notebooks/data-analysis/: business_data_analysis.ipynb  complete_data_analysis.ipynb  reviews_data_analysis.ipynb
notebooks/data-ingestion/: data_ingestion.ipynb
notebooks/sentimental-analysis/: sentiment_analysis.ipynb
notebooks/topic-modeling/: topic_modeling.ipynb
tfm/: tfm.tex
