[project]
name = "tfm-proyecto"
version = "0.1.0"
description = "TFM Big Data and Business Analytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "bertopic>=0.17.3",
    "datasets>=4.0.0",
    "hdbscan>=0.8.40",
    "ijson>=3.4.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "pydeck>=0.9.1",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "spacy>=3.8.7",
    "statsmodels>=0.14.5",
    "streamlit>=1.46.1",
    "streamlit-folium>=0.25.0",
    "tokenizers>=0.21.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.1",
    "umap-learn>=0.5.9.post2",
    "wordcloud>=1.9.4",
]
